src/objects/PaymentInfo__c.object
<CustomObject>
    <fields>
        <fullName>AccountAcountRef__c</fullName>
        <label>会計</label>
        <referenceTo>AccountAcount__c</referenceTo>
        <relationshipLabel>支払情報</relationshipLabel>
        <relationshipName>PaymentInfoAccountRef</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ChildRenRsCount__c</fullName>
        <label>明細件数</label>
        <summaryForeignKey>PaymentDetail__c.PaymentInfoRef__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Credit__c</fullName>
        <description>売掛金で計上の金額</description>
        <label>売掛金（システム用）</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DepositAmount__c</fullName>
        <label>預かり金額</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ImgDataFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <description>会計支払情報から一部分ける作成した支払情報</description>
        <label>架空フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LeadIndexRef__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>予約インデックス</label>
        <referenceTo>LeadIndex__c</referenceTo>
        <relationshipLabel>支払情報</relationshipLabel>
        <relationshipName>PaymentInfoLeadIndexRef</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MediaTypeCode__c</fullName>
        <description>支払情報種別</description>
        <label>メディア種別</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OffsetMoney__c</fullName>
        <description>後払い金額により、該当売掛金を相殺された金額
システムロジック計算用</description>
        <label>売掛金相殺済金額（システム用）</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PaymentType__c</fullName>
        <label>支払種別</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>普通</fullName>
                    <default>true</default>
                    <label>普通</label>
                </value>
                <value>
                    <fullName>予約金</fullName>
                </value>
                <value>
                    <fullName>返金</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RemainingMoney2__c</fullName>
        <description>ロジックで直接計算後の残金</description>
        <label>残金２</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RemainingMoney3__c</fullName>
        <description>システム計算用、直接利用不可</description>
        <label>残金３（システム用）</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RemainingMoney__c</fullName>
        <formula>DepositAmount__c -  UsedAmountCal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>残金</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SalesDateStr__c</fullName>
        <label>売上計上日(文字)(システム用）</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TTendRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>会計支払</label>
        <referenceTo>TTend__c</referenceTo>
        <relationshipLabel>支払情報</relationshipLabel>
        <relationshipName>PaymentInfoTTendRef</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tran1Ref__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>会計明細</label>
        <referenceTo>Tran1__c</referenceTo>
        <relationshipLabel>支払情報</relationshipLabel>
        <relationshipName>PaymentInfoTran1Ref</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UsedAmountCal__c</fullName>
        <label>利用済金額</label>
        <summarizedField>PaymentDetail__c.UsedAmount__c</summarizedField>
        <summaryForeignKey>PaymentDetail__c.PaymentInfoRef__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>支払情報</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>LeadIndexRef__c</columns>
        <columns>AccountAcountRef__c</columns>
        <columns>TTendRef__c</columns>
        <columns>Tran1Ref__c</columns>
        <columns>MediaTypeCode__c</columns>
        <columns>DepositAmount__c</columns>
        <columns>ImgDataFlg__c</columns>
        <columns>RemainingMoney__c</columns>
        <columns>RemainingMoney2__c</columns>
        <columns>RemainingMoney3__c</columns>
        <columns>Credit__c</columns>
        <columns>PaymentType__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
        <language>ja</language>
    </listViews>
    <nameField>
        <displayFormat>P-{0000000000}</displayFormat>
        <label>管理番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>